--- a/ios/ItaliaApp/LaunchScreen.storyboard
+++ b/ios/ItaliaApp/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,69 +22,50 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" image="sfondo" translatesAutoresizingMaskIntoConstraints="NO" id="DPp-fO-Sok">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sh2-hc-8cp" userLabel="View IO Logo">
-                                <rect key="frame" x="0.0" y="120" width="375" height="152"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_io" translatesAutoresizingMaskIntoConstraints="NO" id="pdm-K5-7Ya">
-                                        <rect key="frame" x="155.5" y="20" width="64" height="52"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JZQ-jS-lo4">
-                                        <rect key="frame" x="97" y="89" width="181.5" height="20.5"/>
-                                        <attributedString key="attributedText">
-                                            <fragment content="l’app dei servizi pubblici">
-                                                <attributes>
-                                                    <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <font key="NSFont" metaFont="system" size="17"/>
-                                                </attributes>
-                                            </fragment>
-                                        </attributedString>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="pdm-K5-7Ya" firstAttribute="centerX" secondItem="sh2-hc-8cp" secondAttribute="centerX" id="6lo-7S-d71"/>
-                                    <constraint firstItem="JZQ-jS-lo4" firstAttribute="centerX" secondItem="sh2-hc-8cp" secondAttribute="centerX" id="Syg-oQ-nUu"/>
-                                    <constraint firstItem="JZQ-jS-lo4" firstAttribute="top" secondItem="pdm-K5-7Ya" secondAttribute="bottom" constant="17" id="dVa-pS-pez"/>
-                                    <constraint firstItem="pdm-K5-7Ya" firstAttribute="top" secondItem="sh2-hc-8cp" secondAttribute="top" constant="20" id="zEx-ee-gfl"/>
-                                </constraints>
-                            </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_consiglio_ministri" translatesAutoresizingMaskIntoConstraints="NO" id="Tei-FP-Id0">
-                                <rect key="frame" x="148.5" y="345" width="78" height="87"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_io" translatesAutoresizingMaskIntoConstraints="NO" id="pdm-K5-7Ya">
+                                <rect key="frame" x="155.5" y="259.5" width="64" height="52"/>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aDT-aS-WNn" userLabel="Separator">
-                                <rect key="frame" x="46.5" y="462" width="282" height="2"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="aL7-ys-jhQ">
-                                <rect key="frame" x="46.5" y="494" width="282" height="33"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JZQ-jS-lo4">
+                                <rect key="frame" x="97" y="319.5" width="181.5" height="20.5"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="l’app dei servizi pubblici">
+                                        <attributes>
+                                            <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <font key="NSFont" metaFont="system" size="17"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="aL7-ys-jhQ">
+                                <rect key="frame" x="24" y="571" width="327" height="48"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_pagopa" translatesAutoresizingMaskIntoConstraints="NO" id="ur6-nk-fTh" userLabel="PagoPa logo">
-                                        <rect key="frame" x="0.0" y="0.0" width="119" height="33"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="104" height="48"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_consiglio_ministri" translatesAutoresizingMaskIntoConstraints="NO" id="Tei-FP-Id0">
+                                        <rect key="frame" x="136" y="0.0" width="55" height="48"/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="euNextLogo" translatesAutoresizingMaskIntoConstraints="NO" id="BYK-0Z-U9E">
-                                        <rect key="frame" x="151" y="0.0" width="131" height="33"/>
+                                        <rect key="frame" x="223" y="0.0" width="104" height="48"/>
                                     </imageView>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="sh2-hc-8cp" firstAttribute="top" secondItem="Dji-FG-dfn" secondAttribute="bottom" constant="120" id="2J8-zi-fZC"/>
-                            <constraint firstItem="BW8-EI-1Nz" firstAttribute="top" secondItem="sh2-hc-8cp" secondAttribute="bottom" constant="395" id="CvU-ld-sm6"/>
-                            <constraint firstItem="aDT-aS-WNn" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="D5X-Aq-dcR"/>
-                            <constraint firstItem="BW8-EI-1Nz" firstAttribute="top" secondItem="aDT-aS-WNn" secondAttribute="bottom" constant="203" id="Dfx-e8-9TM"/>
-                            <constraint firstItem="aL7-ys-jhQ" firstAttribute="top" secondItem="aDT-aS-WNn" secondAttribute="bottom" constant="30" id="JZn-yL-fhL"/>
-                            <constraint firstItem="sh2-hc-8cp" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="MS3-Vt-5kh"/>
+                            <constraint firstAttribute="bottom" secondItem="aL7-ys-jhQ" secondAttribute="bottom" constant="48" id="1g8-n7-WYZ"/>
+                            <constraint firstItem="pdm-K5-7Ya" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="APm-2L-EAF"/>
                             <constraint firstAttribute="trailing" secondItem="DPp-fO-Sok" secondAttribute="trailing" id="MgL-AC-X2a"/>
-                            <constraint firstItem="aDT-aS-WNn" firstAttribute="leading" secondItem="aL7-ys-jhQ" secondAttribute="leading" id="Ot6-1v-vtK"/>
-                            <constraint firstItem="Tei-FP-Id0" firstAttribute="top" secondItem="sh2-hc-8cp" secondAttribute="bottom" constant="73" id="Q6O-va-6Hj"/>
-                            <constraint firstItem="Tei-FP-Id0" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="TAl-7b-NdJ"/>
+                            <constraint firstItem="pdm-K5-7Ya" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="OBs-ee-kkB"/>
+                            <constraint firstItem="JZQ-jS-lo4" firstAttribute="top" secondItem="pdm-K5-7Ya" secondAttribute="bottom" constant="8" id="OEo-H1-u0B"/>
                             <constraint firstItem="DPp-fO-Sok" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="TOF-qK-UX1"/>
-                            <constraint firstItem="sh2-hc-8cp" firstAttribute="leading" secondItem="DPp-fO-Sok" secondAttribute="leading" id="The-ae-ODv"/>
+                            <constraint firstItem="aL7-ys-jhQ" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="8" id="Vqb-vz-bVi"/>
                             <constraint firstItem="DPp-fO-Sok" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Ylg-bg-Ae3"/>
-                            <constraint firstItem="aDT-aS-WNn" firstAttribute="top" secondItem="Tei-FP-Id0" secondAttribute="bottom" constant="30" id="aFY-k0-pLn"/>
+                            <constraint firstItem="pdm-K5-7Ya" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-48" id="ayz-qR-dOQ"/>
                             <constraint firstItem="aL7-ys-jhQ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="nr1-zv-P1U"/>
+                            <constraint firstItem="JZQ-jS-lo4" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ods-Ud-rpo"/>
+                            <constraint firstItem="Tei-FP-Id0" firstAttribute="centerX" secondItem="pdm-K5-7Ya" secondAttribute="centerX" id="pZI-tr-LRI"/>
                             <constraint firstAttribute="bottom" secondItem="DPp-fO-Sok" secondAttribute="bottom" id="tET-pj-opH"/>
                         </constraints>
                     </view>
@@ -95,10 +76,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="euNextLogo" width="131" height="30"/>
-        <image name="logo_consiglio_ministri" width="78" height="87"/>
+        <image name="euNextLogo" width="110" height="26"/>
+        <image name="logo_consiglio_ministri" width="43" height="48"/>
         <image name="logo_io" width="64" height="52"/>
-        <image name="logo_pagopa" width="119" height="33"/>
+        <image name="logo_pagopa" width="101" height="28"/>
         <image name="sfondo" width="375" height="667"/>
     </resources>
 </document>
